Add support to copy a project.
This makes it easy to copy the configuration of an existing project and
modify it to suit one's needs.  Turns out to be very handy.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -66,6 +66,9 @@
                   v-bind:id="'view-' + index">View</button>
           <button v-on:click="busy_call(ui, 'edit', project)"
                   v-bind:id="'edit-' + index">Edit</button>
+          <button v-on:click="busy_call(ui, 'copy_project', project)"
+                  v-bind:id="'copy-' + index"
+                  title="Copies project config but not the data.">Copy</button>
           <button v-on:click="remove_project(project)"
                   v-bind:id="'remove-' + index">Remove</button>
       </li>
