Simple UI fixes for processing.
- Do not shwo job info during processing as this looks bad on the UI.
- Instead we log all the processing actions so users can refer to it if
  needed.  This is also useful as the logging helps with debugging.
- Increase the log file size by a factor of two to handle large number
  of files with the processor logging.
- The tagger factory does not update the tags separately but in one go,
  this is efficient and seems to avoid irrelevant tornado errors.
- When there are no processing jobs the UI now shows a clear message.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -492,12 +492,11 @@
   <!-- view-processor template -->
   <script type="text/x-template" id="view-processor-template">
     <label> Processor status: </label> {{processor.status}}
-    <br/>
+   <br/>
+   <div v-if="processor.status === 'running'">
     Completed {{processor.completed.length}} of
-    {{processor.jobs.length}} jobs
-    <ul>
-      <li v-for="job in processor.running">{{job.info}}</li>
-    </ul>
+    {{processor.jobs.length}} jobs (see log for details)
+   </div>
     <button v-on:click="threaded(ui, 'process', project)"
             v-bind:disabled="processor.status === 'running'" id="run-processing">
       Run processing</button>
